# gpt_academic

./: .__test.py  .dockerignore  .dockignore  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Dockerfile+ChatGLM  Dockerfile_old  LICENSE  README.md  README_CN.md  README_old.md  TODO  __main__.py  ai_settings.yaml  app.py  auto_functional.py  cc.json  cfg.json  check_proxy.py  cliff.toml  colorful.py  config.py  core_functional.py  crazy_functional.py  docker-compose.yml  func_box.py  functional.py  functional_crazy.py  gpt_academic.md  init_task.py  instruction.txt  main.py  main_private.py  multi_language.py  objdump.tmp  package.json  (+19 more)
.github/: dependabot.yml  labels.yml  release-drafter.yml
autogpt/: api_manager.py  cli.py  logs.py  setup.py  spinner.py
comm_tools/: Langchain_cn.py  agent.py  authentication.py  base_api.py  check_proxy.py  core_functional.py  crazy_functional.py  database_processor.py  encryption.py  func_box.py  func_signals.py  history_processor.py  logger_handle.py  multi_language.py  ocr_tools.py  overwrites.py  parse_exec.py  path_handle.py  prompt_generator.py  tests.py  theme.py  toolbox.py  user_data_processing.py  webui_local.py
common/: Langchain_cn.py  __init__.py  agent.py  base_api.py  check_proxy.py  core_functional.py  crazy_functional.py  database_processor.py  db_handler.py  embeddings_api.py  encryption.py  func_box.py  gr_converter_html.py  history_handler.py  history_processor.py  init_database.py  logger_handle.py  logger_handler.py  minx_chat_openai.py  multi_language.py  ocr_tools.py  pandora_handler.py  path_handle.py  path_handler.py  toolbox.py  utils.py
crazy_functions/: Academic_Conversation.py  AntFin.py  AntFin_Wrap.py  Arxiv_论文对话.py  Audio_Assistant.py  Audio_Summary.py  CodeInterpreter.py  Commandline_Assistant.py  Conversation_To_File.py  Document_Conversation.py  Document_Conversation_Wrap.py  Document_Optimize.py  Dynamic_Function_Generate.py  Dynamic_Load_Plugin.py  Google_Scholar_Assistant_Legacy.py  Helpers.py  Image_Generate.py  Image_Generate_Wrap.py  Interactive_Func_Template.py  Interactive_Mini_Game.py  Internet_GPT.py  Internet_GPT_Legacy.py  Internet_GPT_Wrap.py  KDOCS_云文档分析.py  KDOCS_流程图_图片分析.py  KDOCS_轻文档分析.py  Langchain知识库.py  Latex_Function.py  Latex_Function_Wrap.py  Latex_Project_Polish.py  Latex_Project_Translate_Legacy.py  Latex全文润色.py  Latex全文翻译.py  Latex输出PDF.py  Latex输出PDF结果.py  Markdown_Translate.py  Math_Animation_Gen.py  Mermaid_Figure_Gen.py  Multi_Agent_Legacy.py  PDF_Convert.py  (+73 more)
docs/: Dockerfile+ChatGLM  Dockerfile+JittorLLM  Dockerfile+NoLocal  Dockerfile+NoLocal+Latex  GithubAction+AllCapacity  GithubAction+AllCapacityBeta  GithubAction+ChatGLM+Moss  GithubAction+JittorLLMs  GithubAction+NoLocal  GithubAction+NoLocal+AudioAssistant  GithubAction+NoLocal+Latex  GithubAction+NoLocal+Latex+Arm  GithubAction+NoLocal+Vectordb  README.Arabic.md  README.English.md  README.French.md  README.German.md  README.Italian.md  README.Japanese.md  README.Korean.md  README.Portuguese.md  README.Russian.md  README.md.Arabic.md  README.md.German.md  README.md.Italian.md  README.md.Korean.md  README.md.Portuguese.md  README_EN.md  README_FR.md  README_JP.md  README_RS.md  WindowsRun.bat  WithFastapi.md  plugin_with_secondary_menu.md  self_analysis.md  test_markdown_format.py  translate_english.json  translate_japanese.json  translate_std.json  translate_traditionalchinese.json  (+4 more)
flagged/: modeling_moss.py
gradio/: .dockerignore  __init__.py  blocks.py  components.py  external.py  interface.py  layouts.py  networking.py  routes.py  strings.py  utils.py  version.txt
img/: README_EN.md
logs/: ai_prompt.yaml
prompt_users/: ai_prompt.yaml  prompt_10.13.250.44.yaml  prompt_127.0.0.1.yaml  prompts-PlexPt.json
request_llm/: README.md  bridge_all.py  bridge_azure_test.py  bridge_chatglm.py  bridge_chatglm3.py  bridge_chatglm_onnx.py  bridge_chatglmft.py  bridge_chatglmonnx.py  bridge_chatgpt.py  bridge_chatgpt_website.py  bridge_claude.py  bridge_claude2.py  bridge_huawei.py  bridge_internlm.py  bridge_jittorllms.py  bridge_jittorllms_llama.py  bridge_jittorllms_pangualpha.py  bridge_jittorllms_rwkv.py  bridge_llama2.py  bridge_moss.py  bridge_newbing.py  bridge_newbingfree.py  bridge_qianfan.py  bridge_qwen.py  bridge_spark.py  bridge_stackclaude.py  bridge_tgui.py  com_sparkapi.py  edge_gpt.py  edge_gpt_free.py  local_llm_class.py  requirements_chatglm.txt  requirements_chatglm3.txt  requirements_chatglm_onnx.txt  requirements_jittorllms.txt  requirements_moss.txt  test_llms.py
request_llms/: README.md  bridge_all.py  bridge_azure_test.py  bridge_chatglm.py  bridge_chatglm3.py  bridge_chatglm4.py  bridge_chatglmft.py  bridge_chatglmonnx.py  bridge_chatgpt.py  bridge_chatgpt_cls.py  bridge_chatgpt_vision.py  bridge_chatgpt_website.py  bridge_claude.py  bridge_claude_cls.py  bridge_cohere.py  bridge_deepseek.py  bridge_deepseekcoder.py  bridge_google_gemini.py  bridge_groq.py  bridge_hf.py  bridge_internlm.py  bridge_jittorllms_llama.py  bridge_jittorllms_pangualpha.py  bridge_jittorllms_rwkv.py  bridge_llama2.py  bridge_moonshot.py  bridge_moss.py  bridge_newbingfree.py  bridge_ollama.py  bridge_openrouter.py  bridge_qianfan.py  bridge_qwen.py  bridge_qwen_1_8B.py  bridge_qwen_7B.py  bridge_qwen_local.py  bridge_skylark2.py  bridge_spark.py  bridge_stackclaude.py  bridge_taichu.py  bridge_tgui.py  (+32 more)
shared_utils/: advanced_markdown_format.py  api_server.py  char_visual_effect.py  colorful.py  config_loader.py  connect_void_terminal.py  context_clip_policy.py  convert_pdf.sh  cookie_manager.py  doc_loader_dynamic.py  docker_as_service_api.py  fastapi_server.py  fastapi_stream_server.py  handle_upload.py  key_pattern_manager.py  logging.py  map_names.py  nltk_downloader.py  text_mask.py
streamlit_gui/: __init__.py  main.py
test_project/: 其他测试
tests/: init_test.py  test_academic_conversation.py  test_anim_gen.py  test_bilibili_down.py  test_doc2x.py  test_embed.py  test_key_pattern_manager.py  test_latex_auto_correct.py  test_llms.py  test_markdown.py  (+10 more)
(+707 files in other folders)
